Refactor ActivationMenu: Simplify FXML structure, enhance layout consistency, and streamline activation logic in the controller for improved readability and maintainability.