@@ -15,17 +15,44 @@ import org.javatuples.Pair;
 
 import java.io.IOException;
 import java.rmi.RemoteException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class ActivationMenuController {
 
     public enum ActivationType {
-        CANNONS,
-        ENGINES,
-        SHIELDS
+        CANNONS {
+            @Override
+            public boolean matches(ViewComponent component) {
+                return component.isCannon();
+            }
+            @Override
+            public void activate(String username, List<Pair<Integer, Integer>> primary, List<Pair<Integer, Integer>> batteries) throws RemoteException {
+                ClientGameModel.getInstance().getClient().activateCannons(username, primary, batteries);
+            }
+        },
+        ENGINES {
+            @Override
+            public boolean matches(ViewComponent component) {
+                return component.isEngine();
+            }
+
+            @Override
+            public void activate(String username, List<Pair<Integer, Integer>> primary, List<Pair<Integer, Integer>> batteries) throws RemoteException {
+                ClientGameModel.getInstance().getClient().activateEngines(username, primary, batteries);
+            }
+        },
+        SHIELDS {
+            @Override
+            public boolean matches(ViewComponent component) {
+                return component.isShield();
+            }
+            @Override
+            public void activate(String username, List<Pair<Integer, Integer>> primary, List<Pair<Integer, Integer>> batteries) throws RemoteException {
+            }
+        };
+
+        public abstract boolean matches(ViewComponent component);
+        public abstract void activate(String username, List<Pair<Integer, Integer>> primary, List<Pair<Integer, Integer>> batteries) throws RemoteException;
     }
 
     @FXML
@@ -53,20 +80,10 @@ public class ActivationMenuController {
         loadShipView();
     }
 
-    public void initializeData(ActivationType type, String message, Integer cardId) {
+    public void initializeData(ActivationType type, String message) {
         this.activationType = type;
         titleLabel.setText(type.toString() + " Activation");
         messageLabel.setText(message);
-
-        if (cardId != null) {
-            try {
-                String imagePath = "/fxml/cards/GT-cards_I_IT_" + String.format("%03d", cardId) + ".jpg";
-                Image cardImage = new Image(getClass().getResourceAsStream(imagePath));
-                cardImageView.setImage(cardImage);
-            } catch (Exception e) {
-                showError("Could not load card image.");
-            }
-        }
     }
 
     private void loadShipView() {
@@ -100,16 +117,14 @@ public class ActivationMenuController {
     }
 
     private void selectComponent(int row, int col) {
-        int componentRow = row - 5;
-        int componentCol = col - (ship.isLearner ? 5 : 4);
-        selectedComponents.add(new Pair<>(componentRow, componentCol));
+        selectedComponents.add(new Pair<>(row, col));
         updateHighlights();
     }
 
     @FXML
     private void handleUndo() {
         if (!selectedComponents.isEmpty()) {
-            selectedComponents.remove(selectedComponents.size() - 1);
+            selectedComponents.removeLast();
             updateHighlights();
         }
     }
@@ -120,8 +135,8 @@ public class ActivationMenuController {
         }
         Map<Pair<Integer, Integer>, Color> highlights = new HashMap<>();
         for (Pair<Integer, Integer> coords : selectedComponents) {
-            int gridRow = coords.getValue0() + 5;
-            int gridCol = coords.getValue1() + (ship.isLearner ? 5 : 4);
+            int gridRow = coords.getValue0();
+            int gridCol = coords.getValue1();
             ViewComponent comp = ship.getComponent(gridRow, gridCol);
             if (comp != null) {
                 Color color = getColorForComponent(comp);
@@ -151,7 +166,7 @@ public class ActivationMenuController {
         List<Pair<Integer, Integer>> batteries = new ArrayList<>();
 
         for (Pair<Integer, Integer> coords : selectedComponents) {
-            ViewComponent comp = ship.getComponent(coords.getValue0() + 5, coords.getValue1() + (ship.isLearner ? 5 : 4));
+            ViewComponent comp = ship.getComponent(coords.getValue0(), coords.getValue1());
             if (comp == null) continue;
 
             if (comp.isBattery()) {
@@ -159,43 +174,21 @@ public class ActivationMenuController {
                 continue;
             }
 
-            switch (activationType) {
-                case CANNONS:
-                    if (comp.isCannon()) {
-                        primary.add(coords);
-                    }
-                    break;
-                case ENGINES:
-                    if (comp.isEngine()) {
-                        primary.add(coords);
-                    }
-                    break;
-                case SHIELDS:
-                    if (comp.isShield()) {
-                        primary.add(coords);
-                    }
-                    break;
+            if (activationType.matches(comp)) {
+                primary.add(coords);
             }
+
         }
 
         try {
             ClientGameModel.getInstance().setBusy();
-            switch (activationType) {
-                case CANNONS:
-                    ClientGameModel.getInstance().getClient().activateCannons(username, primary, batteries);
-                    break;
-                case ENGINES:
-                    ClientGameModel.getInstance().getClient().activateEngines(username, primary, batteries);
-                    break;
-                case SHIELDS:
-                    //ClientGameModel.getInstance().getClient().activateShields(username, primary, batteries);
-                    break;
-            }
+            activationType.activate(username, primary, batteries);
             ClientGameModel.getInstance().setFree();
         } catch (RemoteException e) {
             showError("Connection error: " + e.getMessage());
             ClientGameModel.getInstance().setFree();
         }
+
     }
 
     @FXML
